--- a/client/views/books/insertBook.html
+++ b/client/views/books/insertBook.html
@@ -1,9 +1,8 @@
 <template name="insertBook">
 	{{> meteorErrors }}
 	<form id="insertBook">
-		<label for="title">Título</label>
-		<input type="text" id="title" name="title"><br>
-
+		<label for="title">Título:</label>
+		<input type="text" id="title" name="title"><br><br>
 		<input type="submit" value="Adicionar">
 	</form>
 </template>
